--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <p class="text-gray-400 mb-8 text-lg">L'outil de gestion technique optimisé pour l'événementiel.</p>
         
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-left">
-            <div class="p-4 bg-black/50 rounded-xl border border-white/10 hover:border-purple-500 transition-colors cursor-pointer group">
+            <a href="inventory.html" class="p-4 bg-black/50 rounded-xl border border-white/10 hover:border-purple-500 transition-colors cursor-pointer group block">
                 <h3 class="font-bold text-purple-400 group-hover:text-purple-300">📦 Inventaire</h3>
                 <p class="text-sm text-gray-500">Gérez votre parc matériel lumière et vidéo.</p>
-            </div>
+            </a>
             <div class="p-4 bg-black/50 rounded-xl border border-white/10 hover:border-purple-500 transition-colors cursor-pointer group">
                 <h3 class="font-bold text-purple-400 group-hover:text-purple-300">🗓️ Projets</h3>
                 <p class="text-sm text-gray-500">Planifiez vos sorties et retours de matériel.</p>
@@ -40,5 +40,9 @@
     <footer class="mt-8 text-gray-600 text-xs">
         &copy; 2026 Impact Vision Sàrl - Développé par PicoClaw 🦞
     </footer>
+    <!-- Version Tag -->
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-600 uppercase tracking-widest opacity-50">
+        v4.5.3-core
+    </div>
 </body>
 </html>
