--- a/inventory.html
+++ b/inventory.html
@@ -246,7 +246,8 @@
             inventoryList.innerHTML = `<tr><td colspan="4" class="px-6 py-20 text-center"><div class="animate-spin inline-block w-6 h-6 border-2 border-purple-500 border-t-transparent rounded-full"></div></td></tr>`;
 
             try {
-                let url = 'https://api.rentman.net/equipment';
+                let url = 'https://api.rentman.net/equipment?limit=500';
+                console.log("Fetching URL:", url);
                 if (useProxy) url = 'https://cors-anywhere.herokuapp.com/' + url;
 
                 const response = await fetch(url, {
@@ -275,6 +276,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.6.2-fix-400</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.7.0-clean-url</div>
 </body>
 </html>
