--- a/inventory.html
+++ b/inventory.html
@@ -207,12 +207,13 @@
             }
             inventoryList.innerHTML = '';
             items.forEach(item => {
-                // Gestion dynamique des champs Rentman
+                // Rentman API fields mapping
                 const name = item.name || 'N/A';
                 const code = item.code || '-';
                 
-                // Quantité : on cherche plusieurs champs possibles
-                const quantity = item.quantity ?? item.stock_quantity ?? item.total_quantity ?? 0;
+                // Quantité : Rentman utilise souvent 'quantity' ou 'total_quantity'
+                // On vérifie aussi 'in_stock' ou 'available_quantity' au cas où
+                const quantity = item.quantity ?? item.total_quantity ?? item.stock_quantity ?? item.amount ?? 0;
                 
                 // Dossier : si expand=folder, c'est un objet
                 let folder = '-';
@@ -276,6 +277,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.7.0-clean-url</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.7.1-quantity-fix</div>
 </body>
 </html>
