--- a/inventory.html
+++ b/inventory.html
@@ -283,7 +283,13 @@
 
                 const row = document.createElement('tr');
                 row.className = "hover:bg-purple-600/10 cursor-pointer transition-colors border-b border-white/5 last:border-0 group";
-                row.onclick = () => openDetail(item);
+                
+                // Correction du clic : on passe l'index de l'élément filtré pour être sûr
+                row.addEventListener('click', () => {
+                    console.log("Row clicked for item:", name);
+                    openDetail(item);
+                });
+
                 row.innerHTML = `
                     <td class="px-6 py-4 font-bold text-white group-hover:text-purple-400 transition-colors">${name}</td>
                     <td class="px-6 py-4 text-gray-400 text-xs">${folder}</td>
@@ -392,6 +398,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.8.0-details-view</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.8.1-fix-click</div>
 </body>
 </html>
