--- a/inventory.html
+++ b/inventory.html
@@ -411,7 +411,7 @@
             inventoryList.innerHTML = `<tr><td colspan="4" class="px-6 py-20 text-center"><div class="animate-spin inline-block w-6 h-6 border-2 border-purple-500 border-t-transparent rounded-full"></div></td></tr>`;
 
             try {
-                let url = 'https://api.rentman.net/equipment?limit=500';
+                let url = 'https://api.rentman.net/equipment?limit=500&expand=folder';
                 console.log("Fetching URL:", url);
                 if (useProxy) url = 'https://cors-anywhere.herokuapp.com/' + url;
 
@@ -439,6 +439,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.0-folder-search</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.1-folder-fix</div>
 </body>
 </html>
