fix: final version bump v4.9.7

--- a/inventory.html
+++ b/inventory.html
@@ -458,6 +458,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.6-cache-fix</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.7-final-fix</div>
 </body>
 </html>
