--- a/inventory.html
+++ b/inventory.html
@@ -415,17 +415,17 @@
             inventoryList.innerHTML = `<tr><td colspan="4" class="px-6 py-20 text-center"><div class="animate-spin inline-block w-6 h-6 border-2 border-purple-500 border-t-transparent rounded-full"></div></td></tr>`;
 
             try {
-                // L'API Public Rentman ne supporte pas "expand=folder".
-                // On utilise un cache-buster pour forcer la mise à jour du script.
-                let url = 'https://api.rentman.net/equipment?limit=500&_cb=' + Date.now();
+                // URL simplifiée pour éviter les erreurs 400
+                // Suppression du cache-buster qui peut être rejeté par certains serveurs API
+                let url = 'https://api.rentman.net/equipment?limit=200';
                 console.log("Fetching URL:", url);
                 if (useProxy) url = 'https://cors-anywhere.herokuapp.com/' + url;
 
                 const response = await fetch(url, {
+                    method: 'GET',
                     headers: { 
                         'Authorization': `Bearer ${currentApiKey}`, 
-                        'Accept': 'application/json',
-                        'X-Requested-With': 'XMLHttpRequest'
+                        'Accept': 'application/json'
                     }
                 });
 
@@ -458,6 +458,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.7-final-fix</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.8-clean-api</div>
 </body>
 </html>
