--- a/inventory.html
+++ b/inventory.html
@@ -415,23 +415,31 @@
             inventoryList.innerHTML = `<tr><td colspan="4" class="px-6 py-20 text-center"><div class="animate-spin inline-block w-6 h-6 border-2 border-purple-500 border-t-transparent rounded-full"></div></td></tr>`;
 
             try {
-                // URL simplifiée pour éviter les erreurs 400
-                // Suppression du cache-buster qui peut être rejeté par certains serveurs API
-                let url = 'https://api.rentman.net/equipment?limit=200';
+                // URL ultra-propre avec slash final (souvent requis par certaines API)
+                let url = 'https://api.rentman.net/equipment/';
                 console.log("Fetching URL:", url);
                 if (useProxy) url = 'https://cors-anywhere.herokuapp.com/' + url;
 
+                const headers = {
+                    'Authorization': currentApiKey.includes(' ') ? currentApiKey : `Bearer ${currentApiKey}`,
+                    'X-Requested-With': 'XMLHttpRequest'
+                };
+
                 const response = await fetch(url, {
                     method: 'GET',
-                    headers: { 
-                        'Authorization': `Bearer ${currentApiKey}`, 
-                        'Accept': 'application/json'
-                    }
+                    headers: headers
                 });
 
                 if (!response.ok) {
                     const errorText = await response.text();
-                    throw new Error(`Erreur Rentman: ${response.status} - ${errorText.substring(0, 100)}`);
+                    let errorMsg = `Erreur ${response.status}`;
+                    try {
+                        const errJson = JSON.parse(errorText);
+                        errorMsg += `: ${errJson.message || errJson.error || 'Erreur inconnue'}`;
+                    } catch(e) {
+                        errorMsg += `: ${errorText.substring(0, 100)}`;
+                    }
+                    throw new Error(errorMsg);
                 }
 
                 const data = await response.json();
@@ -458,6 +466,6 @@
             }
         }
     </script>
-    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.8-clean-api</div>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v4.9.9-pro-debug</div>
 </body>
 </html>
