--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
             <div class="absolute top-0 right-0 w-64 h-64 bg-purple-600/5 rounded-full blur-3xl -mr-32 -mt-32 group-hover:bg-purple-600/10 transition-all"></div>
         </a>
 
-        <!-- Card Projets (Coming Soon) -->
-        <div class="group bg-purple-dark p-8 rounded-3xl border border-white/5 opacity-60 relative overflow-hidden">
-            <div class="w-14 h-14 bg-white/5 rounded-2xl flex items-center justify-center mb-6 border border-white/10">
+        <!-- Card Projets -->
+        <a href="projects.html" class="group bg-purple-dark p-8 rounded-3xl border border-white/5 hover:border-purple-500/50 transition-all relative overflow-hidden shadow-2xl">
+            <div class="w-14 h-14 bg-purple-600/20 rounded-2xl flex items-center justify-center mb-6 border border-purple-500/20 group-hover:scale-110 transition-transform">
                 <span class="text-3xl">🗓️</span>
             </div>
-            <h3 class="text-xl font-black tracking-tighter mb-2">PROJETS</h3>
-            <p class="text-gray-500 text-xs leading-relaxed">Planification des sorties, retours et feuilles de route.</p>
-            <div class="mt-6">
-                <span class="bg-white/5 text-gray-500 text-[8px] font-bold px-2 py-1 rounded uppercase tracking-widest border border-white/10">En développement</span>
+            <h3 class="text-xl font-black tracking-tighter mb-2 group-hover:text-purple-400 transition-colors">PROJETS</h3>
+            <p class="text-gray-400 text-xs leading-relaxed">Planification des sorties, retours et suivi des dossiers en cours.</p>
+            <div class="mt-8 flex items-center gap-2 text-purple-500 font-bold text-xs uppercase tracking-widest">
+                Voir le planning <span class="group-hover:translate-x-2 transition-transform">→</span>
             </div>
-        </div>
+        </a>
 
         <!-- Card Scanner (Coming Soon) -->
         <div class="group bg-purple-dark p-8 rounded-3xl border border-white/5 opacity-60 relative overflow-hidden">
