Fix API 400 error: implement pagination for equipment fetch (v5.7.1-stable)

--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion - Tool Grandma</title>
+    <title>Connexion - Dashboard</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #000000; color: #ffffff; }
@@ -77,6 +78,9 @@
                 toggleBtn.click();
             }
         };
+    <script>
+        // ... previous script content ...
     </script>
+    <div class="fixed bottom-4 left-4 text-[10px] font-mono text-gray-700 uppercase tracking-widest opacity-50">v5.7.1-stable</div>
 </body>
 </html>
